<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Main View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="LogInWithMVP" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="sYc-Cp-nfc">
                                <rect key="frame" x="40" y="373.5" width="334" height="149"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="psY-hv-yqB">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter your second name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CId-K2-u57">
                                        <rect key="frame" x="0.0" y="59" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tYF-FM-lwv">
                                        <rect key="frame" x="0.0" y="118" width="334" height="31"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="LOGIN"/>
                                        <connections>
                                            <action selector="enterButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="AnD-Xl-ERn"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dWQ-is-anE">
                                <rect key="frame" x="60" y="129" width="294" height="0.0"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dWQ-is-anE" secondAttribute="trailing" constant="60" id="0CV-Nu-yM7"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sYc-Cp-nfc" secondAttribute="trailing" constant="40" id="8NR-Kb-0Mz"/>
                            <constraint firstItem="dWQ-is-anE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="85" id="LaD-T7-1Xp"/>
                            <constraint firstItem="sYc-Cp-nfc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="uPZ-4h-Kad"/>
                            <constraint firstItem="sYc-Cp-nfc" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="vMt-T7-Wjy"/>
                            <constraint firstItem="dWQ-is-anE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="yXp-NJ-Ir8"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="greetingLabel" destination="dWQ-is-anE" id="HMw-yH-fl3"/>
                        <outlet property="nameTextField" destination="psY-hv-yqB" id="f8X-ch-4W5"/>
                        <outlet property="secondNameTextField" destination="CId-K2-u57" id="9hQ-RK-lC5"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="35" y="98"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
